fix(theme): improve scrollbars, tabs and cards styles

--- a/src/framework/components/card/_card.component.theme.scss
+++ b/src/framework/components/card/_card.component.theme.scss
@@ -31,9 +31,10 @@
     box-shadow: nga-theme(card-shadow);
     font-weight: nga-theme(card-font-weight);
 
-    @include nga-scrollbars(nga-theme(card-scrollbar-width),
-      nga-theme(card-scrollbar-fg),
-      nga-theme(card-scrollbar-bg));
+    @include nga-scrollbars(
+        nga-theme(card-scrollbar-fg),
+        nga-theme(card-scrollbar-bg),
+        nga-theme(scrollbar-width));
 
     &.xsmall-card {
       height: nga-theme(card-height-xsmall);
@@ -99,7 +100,13 @@
     }
 
     nga-card-body {
+      flex: 1;
+      overflow: auto;
       padding: nga-theme(card-padding);
+      @include nga-scrollbars(
+          nga-theme(card-scrollbar-fg),
+          nga-theme(card-scrollbar-bg),
+          nga-theme(scrollbar-width));
     }
 
     nga-card-footer {
