--- a/src/framework/components/route-tabset/route-tabset.component.scss
+++ b/src/framework/components/route-tabset/route-tabset.component.scss
@@ -39,5 +39,5 @@ ul {
 }
 
 :host.full-width ul li {
-  width: 100%;
+  justify-content: space-around;
 }
