--- a/src/framework/components/tabset/_tabset.component.theme.scss
+++ b/src/framework/components/tabset/_tabset.component.theme.scss
@@ -8,12 +8,18 @@
 @mixin nga-tabset-theme() {
 
   nga-tabset {
-    @include nga-scrollbars(nga-theme(scrollbar-width), nga-theme(scrollbar-fg), nga-theme(scrollbar-bg));
+    // TODO: move to global mixin
+    @include nga-scrollbars(
+        nga-theme(scrollbar-fg),
+        nga-theme(scrollbar-bg),
+        nga-theme(scrollbar-width));
 
     ul {
-      border-bottom: 1px solid nga-theme(tabs-separator);
+      font-family: nga-theme(tabs-font-family);
       font-size: nga-theme(tabs-font-size);
+
       padding: 0 nga-theme(tabs-padding);
+      border-bottom: 1px solid nga-theme(tabs-separator);
 
       li {
         background: nga-theme(tabs-header-bg);
@@ -21,6 +27,10 @@
         a {
           padding: nga-theme(tabs-padding);
           color: nga-theme(tabs-fg);
+
+          &:hover {
+            color: nga-theme(color-fg-heading);
+          }
 
           &::before {
             @include btn-hero-success-gradient();
@@ -40,8 +50,9 @@
     }
 
     nga-tab {
+      font-family: nga-theme(tabs-content-font-family);
       font-size: nga-theme(tabs-content-font-size);
-      color: nga-theme(tabs-fg);
+      color: nga-theme(tabs-fg-text);
       background-color: nga-theme(tabs-bg);
       padding: nga-theme(tabs-content-padding);
     }
