--- a/src/framework/styles/themes/_cosmic.scss
+++ b/src/framework/styles/themes/_cosmic.scss
@@ -3,6 +3,7 @@
  * Copyright Protected MonopolyKings. All Rights Reserved.
  * Distribution or making any copies of this software or documentation is prohibited.
  */
+
 @import '../core/functions';
 @import '../core/mixins';
 @import 'default';
@@ -10,10 +11,12 @@
 // default the base theme
 $theme: (
   color-bg: #3d3780,
+  color-bg-active: #494299,
   color-fg: #a1a1e5,
   color-fg-heading: #ffffff,
   color-fg-text: #d1d1ff,
   color-fg-highlight: #00f9a6,
+
   color-gray: rgba(81, 113, 165, 0.15),
   color-neutral: transparent,
   color-white: #ffffff,
@@ -23,36 +26,48 @@ $theme: (
   color-info: #0088ff,
   color-warning: #e6b045,
   color-danger: #ff386a,
+
   separator: #342e73,
   shadow: 0 8px 20px 0 rgba(40, 37, 89, 0.6),
+
   layout-bg: #2c2961,
+
+  scrollbar-fg: #554db3,
+  scrollbar-bg: #332e73,
+
   radial-gradient: radial-gradient(circle at 50% 50%, #423f8c, #302c6e),
   linear-gradient: linear-gradient(to right, #171749, #413789),
+
   sidebar-fg: color-secondary,
   sidebar-bg: color-bg,
+
   header-fg: color-white,
   header-bg: color-bg,
+
   footer-fg: color-fg,
   footer-bg: color-bg,
+
   actions-fg: color-fg,
   actions-bg: color-bg,
+
   user-fg: color-bg,
   user-bg: color-fg,
+
   footer-height: header-height,
+
   sidebar-width: 16.25rem,
   sidebar-width-compact: 3.45rem,
-  sidebar-padding: 0,
+
   menu-fg: color-fg,
   menu-bg: color-bg,
   menu-active-fg: color-white,
-  menu-active-bg: #494299,
   menu-group-fg: color-white,
-  menu-submenu-bg: #2c2966,
+  menu-submenu-bg: layout-bg,
   menu-submenu-fg: color-fg,
-  card-shadow: 4px 0 18px 0 rgba(37, 26, 75, 0.5),
-  card-header-separator: transparent,
-  tabs-separator: transparent,
-  route-tabs-separator: transparent,
+
+  card-separator: transparent,
+
+  modal-separator: transparent,
 );
 
 // register the theme
